<resources>
    <string name="configurar">Configuración Personal</string>
    <string name="app_name">TASMC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="acerca_de">Acerca de la aplicación</string>
    <string name="agregarDesc">Agregar Descripción</string>
    <string name="next">Next</string>
    <string name="traducir">Traducir</string>
    <string name="title_activity_sub">Acerca de</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Abierto</string>
    <string name="drawer_close">Cerrado</string>
    <string name="title_activity_hoteles">Hoteles</string>
    <string name="title_activity_vuelos">Vuelos</string>
    <string name="title_activity_info_aicm">AICM</string>
    <string name="title_activity_list_equipaje">Lista de Equipaje</string>
    <string name="title_activity_list_equipaje_seleccionado">Equipaje</string>
    <string name="title_activity_itinerario">Itinerario</string>
    <string name="title_activity_ruta_aicm">Ruta al AICM</string>
    <string name="title_activity_ubicate">Planta Alta AICM</string>
    <string name="title_activity_info_vuelo">Información de Vuelo</string>
    <string name="title_activity_equipaje">Equipaje</string>
    <string name="title_activity_ida">Ida</string>
    <string name="title_activity_ida__vuelta">Ida_Vuelta</string>
    <string name="title_activity_reconfigura">Configuración Personal</string>
    <string name="title_activity_ubicate_pb">Planta Baja AICM</string>
    <string-array name="tabs">
        <item>IDA</item>
        <item>IDA Y VUELTA</item>
    </string-array>
    <string-array name="tab">
        <item>Planta Alta</item>
        <item>Planta Baja</item>
    </string-array>
    <string-array name="tabv">
        <item>Llegadas Nacionales</item>
        <item>Llegadas Internacionales</item>
        <item>Salidas Nacionales</item>
        <item>Salidas Internacionales</item>
    </string-array>
    <string name="title_activity_list_actividades">ListActividades</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="title_activity_list_servicios">Servicios</string>
    <string name="categoria">Categoría:</string>
    <string name="nombre">Nombre:</string>
    <string name="giro">Giro</string>
    <string name="objetos">Small Text</string>
    <string name="title_activity_nuevo_itinerario">Nuevo Itinerario</string>
    <string name="title_activity_nuevo_equipaje">Nuevo Equipaje</string>
    <string name="title_activity_configuracion">TASMC</string>
    <string name="title_activity_hoteles_disponibles">Hoteles Disponibles</string>
    <string name="title_activity_p">PA</string>
    <string name="title_activity_pb">PB</string>
    <string name="title_activity_vuelos_disponibles">Vuelos Disponibles</string>
    <string name="title_activity_info_mi_vuelo">Info Mi Vuelo</string>
    <string name="continuar_sin_configurar">Continuar sin configurar</string>
    <string name="categoria_preferida">Categoria Preferida:</string>
    <string name="clase_preferida">Clase Preferida:</string>
    <string name="email">Email:</string>
    <string name="listo">Guardar</string>
    <string name="editar">Editar</string>
    <string name="añadir">Añadir</string>
    <string name="fecha_entrada">Fecha entrada</string>
    <string name="nombre_ciudad">Nombre de la ciudad</string>
    <string name="fecha_salida">Fecha salida</string>
    <string name="hint_correo">tasmc@hotmail.com</string>
    <string name="buscar_hoteles">Buscar Hoteles</string>
    <string name="sitio_web_aicm">Sitio Web AICM:</string>
    <string name="telefono">Teléfono:</string>
    <string name="ubicacion">Ubicación:</string>
    <string name="mapa">Mapa</string>
    <string name="servicios">Servicios</string>
    <string name="destino">Destino</string>
    <string name="aerolinea">Aerolínea</string>
    <string name="vuelo">Vuelo</string>
    <string name="hora">Hora</string>
    <string name="estado">Estado</string>
    <string name="sala">Sala</string>
    <string name="terminal">Terminal</string>
    <string name="buscar_mi_vuelo">Buscar mi vuelo</string>
    <string name="hint_numero_vuelo">Numero de vuelo(LAN2629)</string>
    <string name="hint_obligatorio">Obligatorio</string>
    <string name="icono">Icono:</string>
    <string name="hint_titulo">Introducir un destino</string>
    <string name="hint_actividades">Añadir actividades</string>
    <string name="ir_Aicm">Ir a AICM</string>
    <string name="version">Versión 1.0</string>
    <string name="fecha_creacion">Creada el 1 jun 2015</string>
    <string name="nombre_servicio">Nombre</string>
    <string name="origen">Origen</string>
    <string name="hint_origen">Ubicacion Actual</string>
    <string name="hint_destino">San Francisco(SFO)</string>
    <string name="hint_fecha_ida">Fecha Ida</string>
    <string name="buscar_vuelos">Buscar Vuelos</string>
    <string name="hint_fecha_vuelta">Fecha Vuelta</string>
    <string name="viaje_lugar">Miami</string>
    <string name="actividades">Actividades</string>
    <string name="nombre_equipaje">Large Text</string>
    <string name="nombre_hotel">Circus Circus</string>
    <string name="estado_mio">Demorado</string>
    <string name="renglon_menu">Lobo01</string>
    <string name="tarifa_por_adulto">Tarifa por adulto</string>
    <string name="cargos">A incluir tasas y cargos</string>
    <string name="ida">IDA</string>
    <string name="fechai">viernes 22 de mayo de 2015</string>
    <string name="total">Total</string>
    <string name="escalas">Directo</string>
    <string name="vuelta">VUELTA</string>
    <string name="fechav">domingo 24 de mayo de 2015</string>
    <string name="mensaje_toast">Bienvenido a TASMC: Aqui podra realizar una configuración personal de categoria de hotel y clase de vuelo que más le agrade.</string>
    <string name="compartir">Compartir</string>
    <string name="pa">Planta Alta</string>
    <string name="pb">Planta Baja</string>
    <string name="objeto">Objeto</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_inicio">TASMC</string>
    <string name="habitaciones">Habitaciones</string>
    <string-array name="personas">
        <item>1 persona</item>
        <item>2 personas</item>
        <item>3 personas</item>
        <item>4 personas</item>
        <item>5 personas</item>
    </string-array>
    <string-array name="estrellas">
        <item>1 estrella</item>
        <item>2 estrellas</item>
        <item>3 estrellas</item>
        <item>4 estrellas</item>
        <item>5 estrellas</item>
    </string-array>
    <string-array name="clases">
        <item>Económico</item>
        <item>Económico Premium</item>
        <item>Negocios</item>
        <item>Primera</item>
    </string-array>
    <string-array name="pasajeros">
        <item>1 pasajero</item>
        <item>2 pasajeros</item>
        <item>3 pasajeros</item>
        <item>4 pasajeros</item>
        <item>5 pasajeros</item>
    </string-array>
    <string-array name="titulos">
        <item>Hoteles</item>
        <item>Vuelos</item>
        <item>Info AICM</item>
        <item>Lista de Equipaje</item>
        <item>Itinerario de Viaje</item>
        <item>Ruta al AICM</item>
        <item>Ubicate</item>
        <item>Info de Vuelo</item>
    </string-array>
    <string name="title_activity_vuelos_disponibles_ida">Vuelos Disponibles Ida</string>
    <string name="llegada">Llegada</string>
    <string name="salida">Salida</string>
    <string name="title_activity_list_hoteles">Hoteles</string>
    <string name="web">Sitio Web</string>
    <string name="nohabitaciones">No. Habitaciones:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="llamar">Llamar</string>
    <string name="def_costo">Costo no definido</string>
    <string name="mensaje_toastnohotel">No hay información de la ciudad buscada.</string>
    <string name="mensaje_toastnovuelo">No hay información del vuelo buscado.</string>
    <string name="satelite">Satélite</string>
    <string name="relieve">Relieve</string>
</resources>