<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_configurar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vivanco.tasmc.Configuracion">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textEmail"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress" />

    <Spinner
        android:id="@+id/categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textCatego"
        android:layout_marginTop="12dp" />

    <Spinner
        android:id="@+id/clase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textClase"
        android:layout_centerVertical="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/textCatego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email"
        android:layout_marginTop="32dp"
        android:text="@string/categoria_preferida" />

    <TextView
        android:id="@+id/textClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoria"
        android:layout_marginTop="32dp"
        android:text="@string/clase_preferida" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_bar"
        android:layout_marginTop="20dp"
        android:text="@string/email" />

    <Button
        android:id="@+id/listo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/acentuado"
        android:text="@string/listo"
        android:textColor="#ffff" />

</RelativeLayout>
