<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar_vuelo"
        layout="@layout/app_bar_vuelo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_bar_vuelo"
        android:layout_marginTop="31dp"
        android:src="@drawable/ciudadorigen" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etCiudadOrigen"
        android:layout_alignStart="@+id/etCiudadOrigen"
        android:text="@string/origen"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etCiudadOrigen"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_origen"
        android:inputType="textPersonName"
        android:textSize="25sp"
        android:layout_alignTop="@+id/imageView5"
        android:layout_toEndOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView5"
        android:layout_marginTop="42dp"
        android:layout_toStartOf="@+id/etCiudadOrigen"
        android:src="@drawable/ciudaddestino" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etCiudadDestino"
        android:layout_alignStart="@+id/etCiudadOrigen"
        android:text="@string/destino"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etCiudadDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etCiudadOrigen"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignTop="@+id/imageView6"
        android:ems="10"
        android:hint="@string/hint_destino"
        android:inputType="textPersonName"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etCiudadDestino"
        android:layout_marginTop="37dp"
        android:src="@drawable/calendario" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/dinero"
        android:layout_below="@+id/imageView7"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnBuscarVuelos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/acentuadoVuelo"
        android:text="@string/buscar_vuelos"
        android:textColor="@android:color/white"
        android:onClick="buscar"/>

    <Spinner
        android:id="@+id/sClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etCiudadDestino"
        android:layout_alignTop="@+id/imageView9" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView7"
        android:layout_alignStart="@+id/etCiudadDestino"
        android:ems="10"
        android:hint="@string/hint_fecha_ida"
        android:inputType="date"
        android:textSize="25sp"
        android:layout_alignEnd="@+id/etCiudadDestino" />

</RelativeLayout>
