<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vivanco.tasmc.InfoMiVuelo">

    <include
        android:id="@+id/app_bar_infv"
        layout="@layout/app_bar_infv" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar_infv"
        android:text="@string/categoria"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="15dp"
        android:text="@string/telefono"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:text="@string/ciudad"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/textView14" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:text="@string/habitaciones"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/textView16" />

    <TextView
        android:id="@+id/tvCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="hola"
        android:layout_below="@+id/app_bar_infv"
        android:layout_toEndOf="@+id/textView19" />

    <TextView
        android:id="@+id/tvWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="hola"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignStart="@+id/tvCategoria" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="hola"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignStart="@+id/tvWeb" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sHabitaciones"
        android:layout_alignTop="@+id/textView19"
        android:layout_alignStart="@+id/tvCategoria" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tvCiudad"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignStart="@+id/tvCategoria" />

</RelativeLayout>
